--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,10 +1,10 @@
 .sidebar {
   width: 264px;
-  height: 100%;
-  flex-shrink: 0;
+  flex: 1;
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  min-height: 0;
 }
 
 .tabs {
